--- a/examples/index.html
+++ b/examples/index.html
@@ -13,11 +13,11 @@
 	<script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 	<script src="../bower_components/ui-utils/ui-utils.js"></script>
 	<script src="../bower_components/underscore/underscore.js"></script>
-	<script src="../selectController.js"></script>
+	<script src="../selekt.js"></script>
 	<script src="groupList.js"></script>
 	<script src="example.js"></script>
 </head>
-<body ng-controller="SelectController">
-	<ng-include src="'select.html'"></ng-include>
+<body ng-controller="ExampleController">
+	<div selekt="selektOptions"></div>
 </body>
 </html>
