--- a/select.html
+++ b/select.html
@@ -1,4 +1,4 @@
-
+<div class="selekt">
 <div class="preview-widget">
 	<div style="padding: 0" ng-class="preview ? 'col-sm-7' : 'col-sm-12'">
 		<div class="search-widget"
@@ -285,4 +285,5 @@
 			<label class="btn btn-primary" ng-model="preview" btn-radio="false">Off</label>
 		</div>
 	</div>
+</div>
 </div>
